ISPN-8397 Added scripts for measuring performance